# DIRAC

./: .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .gitlab-ci.yml.orig  .landscape.yml  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .readthedocs.yml  .travis.yml  AUTHORS.rst  Makefile  README.md  README.rst  SECURITY.md  __init__.py  codecov.yml  dirac.cfg  environment-py3.yml  environment.yml  globalDefaults.cfg  integration_tests.py  pilot.cfg  pyproject.toml  pytest.ini  release.notes  release.notes.orig  releasenotes.rst  releases.cfg  releases.ini  remove_setup.py  requirements.txt  requirements.txt.orig  setup.cfg  setup.py  std.out  test.sh  testSQL.py  versions.cfg
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE  labeler.yml
.github/workflows/: basic-python3.yml  basic.yml  cvmfs.yml  deployment.yml  diracinstall.yml  integration.yml  labeler.yml  linting.yml  make_release.py  nightly.yml  pilotWrapper.yml  pr-sweep.yml  semantic.yml  submitAndMatch.yml  sweep.yml  workflow_tests.yml
.travis.d/: .pylintrc3k  checkDocs.sh  runPylint.sh
AccountingSystem/: ConfigTemplate.cfg  __init__.py
AccountingSystem/Agent/: NetworkAgent.py  __init__.py
AccountingSystem/Client/: AccountingCLI.py  AccountingClient.py  DataStoreClient.py  ReportCLI.py  ReportsClient.py
AccountingSystem/DB/: AccountingDB.py  AccountingDB.sql  MultiAccountingDB.py
AccountingSystem/Service/: AccountingHandler.py  DataStoreHandler.py  ReportGeneratorHandler.py
AccountingSystem/cmt/: requirements
AccountingSystem/private/: AccountingDB.py  DBUtils.py  DataCache.py  FileCoding.py  MainPlotter.py  MainReporter.py  ObjectLoader.py  Plots.py  PlotsCache.py  Summaries.py  TypeLoader.py  ViewPlotter.py  ViewsCache.py
AccountingSystem/scripts/: dirac-accounting-admin-cli.py  dirac-accounting-cli.py  dirac-accounting-decode-fileid.py  dirac-accounting-report-cli.py  dirac-admin-accounting-cli.py
ConfigurationSystem/: ConfigTemplate.cfg  __init__.py
ConfigurationSystem/API/: ConfAPIHandler.py
ConfigurationSystem/Agent/: Bdii2CSAgent.py  CE2CSAgent.py  GOCDB2CSAgent.py  RucioSynchronizerAgent.py  UsersAndGroups.py  VOMS2CSAgent.py  __init__.py
ConfigurationSystem/Client/: CFG.py  CSAPI.py  CSCLI.py  CSShellCLI.py  Config.py  ConfigurationClient.py  ConfigurationData.py  ConfigurationServerClient.py  LocalConfiguration.py  PathFinder.py  Shortcuts.py  UserConfiguration.py  Utilities.py  VOMS2CSSynchronizer.py  VOMS2CSSyncronizer.py  __init__.py
ConfigurationSystem/Service/: ConfigurationHandler.py  TornadoConfigurationHandler.py  UpdateRemotePilotFileHandler.py  __init__.py
ConfigurationSystem/Utilities/: ConfigurationHandler.py  __init__.py
ConfigurationSystem/cmt/: requirements
ConfigurationSystem/private/: CFG.py  ConfigurationClient.py  ConfigurationData.py  Modificator.py  Refresher.py  ServiceInterface.py  ServiceInterfaceBase.py  ServiceInterfaceTornado.py  __init__.py
ConfigurationSystem/scripts/: dirac-admin-add-resources.py  dirac-admin-add-shifter.py  dirac-admin-add-site.py  dirac-admin-bdii-info.py  dirac-admin-check-config-options.py  dirac-admin-sort-cs-sites.py  dirac-admin-voms-sync.py  dirac-configuration-cli  dirac-configuration-cli.py  dirac-configuration-convert-resources-schema.py  dirac-configuration-dump-local-cache.py  dirac-configuration-shell.py  dirac-info-sites.py
ConfigurationSystem/test/: Test_Bdii2CS.py  Test_agentOptions.py  __init__.py  resources.cfg  test.cfg  test_Resources.py  test_gCFG.py
Core/: __init__.py
Core/Agent/: AgentBase.py  __init__.py
Core/Base/: API.py  Agent.py  AgentModule.py  AgentReactor.py  BaseRSSDB.py  BaseTemplate.cfg  CLI.py  Client.py  ConsumerModule.py  ConsumerReactor.py  DB.py  DiracScript  DiracScript.py  ElasticDB.py  Executor.py  ExecutorMindHandler.py  ExecutorModule.py  ExecutorReactor.py  ExecutorService.py  SQLAlchemyDB.py  Script.py
Core/DISET/: AuthManager.py  Client.py  HTTPDISETConnection.py  MessageClient.py  RPCClient.py  RequestHandler.py  Server.py  ServiceReactor.py  ThreadConfig.py  ThreadCredentials.py  TransferClient.py  __init__.py
Core/FileCatalog/: __init__.py
Core/HTTP/: __init__.py
Core/LCG/: GGUSTicketsClient.py  GOCDBClient.py  GOCDBClient.py.LOCAL.9426.py~  GOCDBClient.py.orig  SAMResultsClient.py  SLSClient.py
Core/Security/: BaseSecurity.py  CS.py  File.py  Locations.py  Misc.py  MyProxy.py  Properties.py  ProxyFile.py  ProxyInfo.py  Utilities.py  VOMS.py  VOMSAdmin.py  VOMSService.py  X509CRL.py  X509Certificate.py  X509Chain.py  X509Request.py  __init__.py
DIRAC/: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS.rst  MANIFEST.in  pyproject.toml  releases.cfg  setup.cfg
DIRAC_1W82NMpilot/: dirac-pilot.py
DIRAC_w6dEIHpilot/: dirac-install.py
DataManagementSystem/: ConfigTemplate.cfg  __init__.py
FrameworkSystem/: ConfigTemplate.cfg
Interfaces/: __init__.py
LHCbSystem/: __init__.py
Local_ZjPtKb_JobDir/: jobDescription.xml
LoggingSystem/: __init__.py
Monitoring/: ConfigTemplate.cfg
MonitoringSystem/: ConfigTemplate.cfg
ProductionSystem/: ConfigTemplate.cfg  __init__.py
RequestManagementSystem/: ConfigTemplate.cfg  __init__.py
ResourceStatusSystem/: .project  ConfigTemplate.cfg  INSTALL.txt  __init__.py
Resources/: Utilities.py  __init__.py
StagerSystem/: __init__.py
StorageManagementSystem/: ConfigTemplate.cfg  __init__.py
TransformationSystem/: ConfigTemplate.cfg  __init__.py
WorkloadManagementSystem/: ConfigTemplate.cfg  __init__.py
cmt/: requirements
consistency_check/: README.md  consistency.py
container/: Dockerfile  README.md  dockerEntrypoint.sh
dashboards/: WMSDashboard.json  diracLogsDashboard.json
docs/: Makefile  README  __init__.py  docs.conf  requirements.txt  requirements_py3.txt  setup.py
tests/: .dirac-ci-config.yaml  DISET_JSON_test.py  README.rst  Test_Client_TransformationSystem.py  checkDocs.sh  conftest.py  openssl_config_DIRACDockerDevBox  openssl_config_DIRACDockerDevBox_usr  py3Check.sh  py3CheckDirs.txt  runPylint.sh
virtualmachine/: Vagrantfile
(+6436 files in other folders)
