###############################################################################
# Setuptools
###############################################################################

[metadata]
name = DIRAC
description = DIRAC is an interware, meaning a software framework for distributed computing.
long_description = file: README.rst
license = GPL-3.0-only
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires = >=3.8
package_dir=
    =src
packages = find:
install_requires =
    certifi
    diraccfg
    future
    gfal2-python
    M2Crypto
    pexpect
    psutil
    pyasn1
    pyasn1-modules
    python-dateutil
    requests
    six
    subprocess32

[options.packages.find]
where=src

[options.extras_require]
server =
    # arc
    boto3
    botocore
    CMRESHandler
    elasticsearch
    elasticsearch_dsl
    fts3-rest
    GitPython
    ldap3
    matplotlib
    mysqlclient
    numpy
    pillow
    pyparsing
    python-irodsclient
    python-json-logger
    pytz
    sqlalchemy
    stomp.py
    suds-jurko
    tornado
    tornado-m2crypto
testing =
    flaky
    hypothesis
    mock
    parameterized
    pytest

[options.entry_points]
dirac =
    metadata = DIRAC:extension_metadata
console_scripts =
    dirac-info = DIRAC.Core.scripts.dirac_info:main
    dirac-proxy-info = DIRAC.FrameworkSystem.scripts.dirac_proxy_info:main
    dirac-proxy-init = DIRAC.FrameworkSystem.scripts.dirac_proxy_init:main


###############################################################################
# Linting
###############################################################################

# pep8 binary will still look into this section
[pep8]
# Pep8 codes:
# E111 - indentation is not a multiple of four
# E114  indentation is not a multiple of four (comment)
ignore=E111,E114

# Make it format also comments, and method signatures
aggressive=2

# Understood by pep8 and autopep8
max_line_length=120
# indent_size is unknown to pep8, but not to autopep8
indent_size=2

[pycodestyle]
# Pep8 codes:
# E111 - indentation is not a multiple of four
# E114 - indentation is not a multiple of four (comment)
# E402 - module level import not at top of file (for scripts)
# W503 - line break before binary operator (stupid, complains after or before...) 
# W504 - line break after binary operator (stupid, complains after or before...) 
ignore=E111,E114,E402,W503,W504
max_line_length=120
