###############################################################################
# Setuptools
###############################################################################

[metadata]
name = DIRAC
description = DIRAC is an interware, meaning a software framework for distributed computing.
long_description = file: README.rst
url = https://github.com/DIRACGrid/DIRAC/
license = GPL-3.0-only
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: System :: Distributed Computing

[options]
python_requires = >=3.8
package_dir=
    =src
packages = find:
# TODO: This should be treated as a legacy workaround and eventually removed
scripts =
    src/DIRAC/Core/scripts/genAllCAs.sh
    src/DIRAC/Core/scripts/dirac-cert-convert.sh
    src/DIRAC/Core/scripts/install_site.sh
    src/DIRAC/Core/scripts/genRevokedCerts.sh
install_requires =
    boto3
    botocore
    certifi
    diraccfg
    fts3-rest
    future
    gfal2-python
    M2Crypto >=0.36
    pexpect
    psutil
    pyasn1
    pyasn1-modules
    pyparsing
    python-dateutil
    pytz
    requests
    setuptools
    six
    sqlalchemy
    subprocess32
    tornado ~=5.1.1

[options.packages.find]
where=src

[options.extras_require]
server =
    # arc6 doesn't provide a proper Python package with metadata
    # (it just installs into site-packages)
    # arc
    CMRESHandler
    elasticsearch
    elasticsearch_dsl
    GitPython
    ldap3
    matplotlib
    mysqlclient
    numpy
    pillow
    python-irodsclient
    python-json-logger
    stomp.py
    suds-jurko
    tornado
    tornado-m2crypto
testing =
    flaky
    hypothesis
    mock
    parameterized
    pytest

[options.entry_points]
dirac =
    metadata = DIRAC:extension_metadata
# For details on adding additional scripts to vanilla DIRAC or external extensions see
# https://dirac.readthedocs.io/en/integration/DeveloperGuide/AddingNewComponents/DevelopingCommands/index.html
console_scripts =
    # AccountingSystem
    dirac-accounting-decode-fileid = DIRAC.AccountingSystem.scripts.dirac_accounting_decode_fileid:main
    dirac-admin-accounting-cli = DIRAC.AccountingSystem.scripts.dirac_admin_accounting_cli:main
    # ConfigurationSystem
    dirac-admin-add-resources = DIRAC.ConfigurationSystem.scripts.dirac_admin_add_resources:main
    dirac-admin-add-shifter = DIRAC.ConfigurationSystem.scripts.dirac_admin_add_shifter:main
    dirac-admin-add-site = DIRAC.ConfigurationSystem.scripts.dirac_admin_add_site:main
    dirac-admin-bdii-info = DIRAC.ConfigurationSystem.scripts.dirac_admin_bdii_info:main
    dirac-admin-check-config-options = DIRAC.ConfigurationSystem.scripts.dirac_admin_check_config_options:main
    dirac-admin-sort-cs-sites = DIRAC.ConfigurationSystem.scripts.dirac_admin_sort_cs_sites:main
    dirac-admin-voms-sync = DIRAC.ConfigurationSystem.scripts.dirac_admin_voms_sync:main
    dirac-configuration-cli = DIRAC.ConfigurationSystem.scripts.dirac_configuration_cli:main
    dirac-configuration-dump-local-cache = DIRAC.ConfigurationSystem.scripts.dirac_configuration_dump_local_cache:main
    dirac-configuration-shell = DIRAC.ConfigurationSystem.scripts.dirac_configuration_shell:main
    # Core
    dirac-agent = DIRAC.Core.scripts.dirac_agent:main
    dirac-configure = DIRAC.Core.scripts.dirac_configure:main
    dirac-executor = DIRAC.Core.scripts.dirac_executor:main
    dirac-externals-requirements = DIRAC.Core.scripts.dirac_externals_requirements:main
    dirac-info = DIRAC.Core.scripts.dirac_info:main
    dirac-install-db = DIRAC.Core.scripts.dirac_install_db:main
    dirac-install-web-portal = DIRAC.Core.scripts.dirac_install_web_portal:main
    dirac-platform = DIRAC.Core.scripts.dirac_platform:main
    dirac-service = DIRAC.Core.scripts.dirac_service:main
    dirac-setup-site = DIRAC.Core.scripts.dirac_setup_site:main
    dirac-version = DIRAC.Core.scripts.dirac_version:main
    # Core.Tornado
    tornado-start-CS = DIRAC.Core.Tornado.scripts.tornado_start_CS:main
    tornado-start-all = DIRAC.Core.Tornado.scripts.tornado_start_all:main
    # DataManagementSystem
    dirac-admin-allow-se = DIRAC.DataManagementSystem.scripts.dirac_admin_allow_se:main
    dirac-admin-ban-se = DIRAC.DataManagementSystem.scripts.dirac_admin_ban_se:main
    dirac-admin-user-quota = DIRAC.DataManagementSystem.scripts.dirac_admin_user_quota:main
    dirac-dms-add-file = DIRAC.DataManagementSystem.scripts.dirac_dms_add_file:main
    dirac-dms-catalog-metadata = DIRAC.DataManagementSystem.scripts.dirac_dms_catalog_metadata:main
    dirac-dms-change-replica-status = DIRAC.DataManagementSystem.scripts.dirac_dms_change_replica_status:main
    dirac-dms-clean-directory = DIRAC.DataManagementSystem.scripts.dirac_dms_clean_directory:main
    dirac-dms-create-archive-request = DIRAC.DataManagementSystem.scripts.dirac_dms_create_archive_request:main
    dirac-dms-create-moving-request = DIRAC.DataManagementSystem.scripts.dirac_dms_create_moving_request:main
    dirac-dms-create-removal-request = DIRAC.DataManagementSystem.scripts.dirac_dms_create_removal_request:main
    dirac-dms-data-size = DIRAC.DataManagementSystem.scripts.dirac_dms_data_size:main
    dirac-dms-directory-sync = DIRAC.DataManagementSystem.scripts.dirac_dms_directory_sync:main
    dirac-dms-filecatalog-cli = DIRAC.DataManagementSystem.scripts.dirac_dms_filecatalog_cli:main
    dirac-dms-find-lfns = DIRAC.DataManagementSystem.scripts.dirac_dms_find_lfns:main
    dirac-dms-move-replica-request = DIRAC.DataManagementSystem.scripts.dirac_dms_move_replica_request:main
    dirac-dms-protocol-matrix = DIRAC.DataManagementSystem.scripts.dirac_dms_protocol_matrix:main
    dirac-dms-put-and-register-request = DIRAC.DataManagementSystem.scripts.dirac_dms_put_and_register_request:main
    dirac-dms-remove-catalog-files = DIRAC.DataManagementSystem.scripts.dirac_dms_remove_catalog_files:main
    dirac-dms-remove-catalog-replicas = DIRAC.DataManagementSystem.scripts.dirac_dms_remove_catalog_replicas:main
    dirac-dms-remove-files = DIRAC.DataManagementSystem.scripts.dirac_dms_remove_files:main
    dirac-dms-remove-replicas = DIRAC.DataManagementSystem.scripts.dirac_dms_remove_replicas:main
    dirac-dms-replica-metadata = DIRAC.DataManagementSystem.scripts.dirac_dms_replica_metadata:main
    dirac-dms-replicate-and-register-request = DIRAC.DataManagementSystem.scripts.dirac_dms_replicate_and_register_request:main
    dirac-dms-resolve-guid = DIRAC.DataManagementSystem.scripts.dirac_dms_resolve_guid:main
    dirac-dms-set-replica-status = DIRAC.DataManagementSystem.scripts.dirac_dms_set_replica_status:main
    dirac-dms-show-se-status = DIRAC.DataManagementSystem.scripts.dirac_dms_show_se_status:main
    dirac-dms-user-lfns = DIRAC.DataManagementSystem.scripts.dirac_dms_user_lfns:main
    dirac-dms-user-quota = DIRAC.DataManagementSystem.scripts.dirac_dms_user_quota:main
    # FrameworkSystem
    dirac-admin-get-CAs = DIRAC.FrameworkSystem.scripts.dirac_admin_get_CAs:main
    dirac-admin-get-proxy = DIRAC.FrameworkSystem.scripts.dirac_admin_get_proxy:main
    dirac-admin-proxy-upload = DIRAC.FrameworkSystem.scripts.dirac_admin_proxy_upload:main
    dirac-admin-sysadmin-cli = DIRAC.FrameworkSystem.scripts.dirac_admin_sysadmin_cli:main
    dirac-admin-update-instance = DIRAC.FrameworkSystem.scripts.dirac_admin_update_instance:main
    dirac-admin-update-pilot = DIRAC.FrameworkSystem.scripts.dirac_admin_update_pilot:main
    dirac-admin-users-with-proxy = DIRAC.FrameworkSystem.scripts.dirac_admin_users_with_proxy:main
    dirac-install-component = DIRAC.FrameworkSystem.scripts.dirac_install_component:main
    dirac-install-tornado-service = DIRAC.FrameworkSystem.scripts.dirac_install_tornado_service:main
    dirac-monitoring-get-components-status = DIRAC.FrameworkSystem.scripts.dirac_monitoring_get_components_status:main
    dirac-myproxy-upload = DIRAC.FrameworkSystem.scripts.dirac_myproxy_upload:main
    dirac-populate-component-db = DIRAC.FrameworkSystem.scripts.dirac_populate_component_db:main
    dirac-proxy-destroy = DIRAC.FrameworkSystem.scripts.dirac_proxy_destroy:main
    dirac-proxy-get-uploaded-info = DIRAC.FrameworkSystem.scripts.dirac_proxy_get_uploaded_info:main
    dirac-proxy-info = DIRAC.FrameworkSystem.scripts.dirac_proxy_info:main
    dirac-proxy-init = DIRAC.FrameworkSystem.scripts.dirac_proxy_init:main
    dirac-restart-component = DIRAC.FrameworkSystem.scripts.dirac_restart_component:main
    dirac-start-component = DIRAC.FrameworkSystem.scripts.dirac_start_component:main
    dirac-status-component = DIRAC.FrameworkSystem.scripts.dirac_status_component:main
    dirac-stop-component = DIRAC.FrameworkSystem.scripts.dirac_stop_component:main
    dirac-sys-sendmail = DIRAC.FrameworkSystem.scripts.dirac_sys_sendmail:main
    dirac-uninstall-component = DIRAC.FrameworkSystem.scripts.dirac_uninstall_component:main
    # Interfaces
    dirac-admin-add-group = DIRAC.Interfaces.scripts.dirac_admin_add_group:main
    dirac-admin-add-host = DIRAC.Interfaces.scripts.dirac_admin_add_host:main
    dirac-admin-add-user = DIRAC.Interfaces.scripts.dirac_admin_add_user:main
    dirac-admin-allow-site = DIRAC.Interfaces.scripts.dirac_admin_allow_site:main
    dirac-admin-ban-site = DIRAC.Interfaces.scripts.dirac_admin_ban_site:main
    dirac-admin-ce-info = DIRAC.Interfaces.scripts.dirac_admin_ce_info:main
    dirac-admin-delete-user = DIRAC.Interfaces.scripts.dirac_admin_delete_user:main
    dirac-admin-get-banned-sites = DIRAC.Interfaces.scripts.dirac_admin_get_banned_sites:main
    dirac-admin-get-job-pilot-output = DIRAC.Interfaces.scripts.dirac_admin_get_job_pilot_output:main
    dirac-admin-get-job-pilots = DIRAC.Interfaces.scripts.dirac_admin_get_job_pilots:main
    dirac-admin-get-pilot-info = DIRAC.Interfaces.scripts.dirac_admin_get_pilot_info:main
    dirac-admin-get-pilot-logging-info = DIRAC.Interfaces.scripts.dirac_admin_get_pilot_logging_info:main
    dirac-admin-get-pilot-output = DIRAC.Interfaces.scripts.dirac_admin_get_pilot_output:main
    dirac-admin-get-site-mask = DIRAC.Interfaces.scripts.dirac_admin_get_site_mask:main
    dirac-admin-list-hosts = DIRAC.Interfaces.scripts.dirac_admin_list_hosts:main
    dirac-admin-list-users = DIRAC.Interfaces.scripts.dirac_admin_list_users:main
    dirac-admin-modify-user = DIRAC.Interfaces.scripts.dirac_admin_modify_user:main
    dirac-admin-pilot-summary = DIRAC.Interfaces.scripts.dirac_admin_pilot_summary:main
    dirac-admin-reset-job = DIRAC.Interfaces.scripts.dirac_admin_reset_job:main
    dirac-admin-service-ports = DIRAC.Interfaces.scripts.dirac_admin_service_ports:main
    dirac-admin-set-site-protocols = DIRAC.Interfaces.scripts.dirac_admin_set_site_protocols:main
    dirac-admin-site-info = DIRAC.Interfaces.scripts.dirac_admin_site_info:main
    dirac-admin-site-mask-logging = DIRAC.Interfaces.scripts.dirac_admin_site_mask_logging:main
    dirac-admin-sync-users-from-file = DIRAC.Interfaces.scripts.dirac_admin_sync_users_from_file:main
    dirac-dms-get-file = DIRAC.Interfaces.scripts.dirac_dms_get_file:main
    dirac-dms-lfn-accessURL = DIRAC.Interfaces.scripts.dirac_dms_lfn_accessURL:main
    dirac-dms-lfn-metadata = DIRAC.Interfaces.scripts.dirac_dms_lfn_metadata:main
    dirac-dms-lfn-replicas = DIRAC.Interfaces.scripts.dirac_dms_lfn_replicas:main
    dirac-dms-pfn-accessURL = DIRAC.Interfaces.scripts.dirac_dms_pfn_accessURL:main
    dirac-dms-pfn-metadata = DIRAC.Interfaces.scripts.dirac_dms_pfn_metadata:main
    dirac-dms-replicate-lfn = DIRAC.Interfaces.scripts.dirac_dms_replicate_lfn:main
    dirac-framework-ping-service = DIRAC.Interfaces.scripts.dirac_framework_ping_service:main
    dirac-framework-self-ping = DIRAC.Interfaces.scripts.dirac_framework_self_ping:main
    dirac-repo-monitor = DIRAC.Interfaces.scripts.dirac_repo_monitor:main
    dirac-utils-file-adler = DIRAC.Interfaces.scripts.dirac_utils_file_adler:main
    dirac-utils-file-md5 = DIRAC.Interfaces.scripts.dirac_utils_file_md5:main
    dirac-wms-get-normalized-queue-length = DIRAC.Interfaces.scripts.dirac_wms_get_normalized_queue_length:main
    dirac-wms-get-queue-normalization = DIRAC.Interfaces.scripts.dirac_wms_get_queue_normalization:main
    dirac-wms-job-attributes = DIRAC.Interfaces.scripts.dirac_wms_job_attributes:main
    dirac-wms-job-delete = DIRAC.Interfaces.scripts.dirac_wms_job_delete:main
    dirac-wms-job-get-input = DIRAC.Interfaces.scripts.dirac_wms_job_get_input:main
    dirac-wms-job-get-jdl = DIRAC.Interfaces.scripts.dirac_wms_job_get_jdl:main
    dirac-wms-job-get-output = DIRAC.Interfaces.scripts.dirac_wms_job_get_output:main
    dirac-wms-job-get-output-data = DIRAC.Interfaces.scripts.dirac_wms_job_get_output_data:main
    dirac-wms-job-kill = DIRAC.Interfaces.scripts.dirac_wms_job_kill:main
    dirac-wms-job-logging-info = DIRAC.Interfaces.scripts.dirac_wms_job_logging_info:main
    dirac-wms-job-parameters = DIRAC.Interfaces.scripts.dirac_wms_job_parameters:main
    dirac-wms-job-peek = DIRAC.Interfaces.scripts.dirac_wms_job_peek:main
    dirac-wms-job-reschedule = DIRAC.Interfaces.scripts.dirac_wms_job_reschedule:main
    dirac-wms-job-status = DIRAC.Interfaces.scripts.dirac_wms_job_status:main
    dirac-wms-job-submit = DIRAC.Interfaces.scripts.dirac_wms_job_submit:main
    dirac-wms-jobs-select-output-search = DIRAC.Interfaces.scripts.dirac_wms_jobs_select_output_search:main
    dirac-wms-select-jobs = DIRAC.Interfaces.scripts.dirac_wms_select_jobs:main
    # ProductionSystem
    dirac-prod-add-trans = DIRAC.ProductionSystem.scripts.dirac_prod_add_trans:main
    dirac-prod-clean = DIRAC.ProductionSystem.scripts.dirac_prod_clean:main
    dirac-prod-delete = DIRAC.ProductionSystem.scripts.dirac_prod_delete:main
    dirac-prod-get = DIRAC.ProductionSystem.scripts.dirac_prod_get:main
    dirac-prod-get-all = DIRAC.ProductionSystem.scripts.dirac_prod_get_all:main
    dirac-prod-get-description = DIRAC.ProductionSystem.scripts.dirac_prod_get_description:main
    dirac-prod-get-trans = DIRAC.ProductionSystem.scripts.dirac_prod_get_trans:main
    dirac-prod-start = DIRAC.ProductionSystem.scripts.dirac_prod_start:main
    dirac-prod-stop = DIRAC.ProductionSystem.scripts.dirac_prod_stop:main
    # Resources
    dirac-resource-get-parameters = DIRAC.Resources.scripts.dirac_resource_get_parameters:main
    dirac-resource-info = DIRAC.Resources.scripts.dirac_resource_info:main
    # RequestManagementSystem
    dirac-rms-list-req-cache = DIRAC.RequestManagementSystem.scripts.dirac_rms_list_req_cache:main
    dirac-rms-reqdb-summary = DIRAC.RequestManagementSystem.scripts.dirac_rms_reqdb_summary:main
    dirac-rms-request = DIRAC.RequestManagementSystem.scripts.dirac_rms_request:main
    # ResourceStatusSystem
    dirac-rss-list-status = DIRAC.ResourceStatusSystem.scripts.dirac_rss_list_status:main
    dirac-rss-query-db = DIRAC.ResourceStatusSystem.scripts.dirac_rss_query_db:main
    dirac-rss-query-dtcache = DIRAC.ResourceStatusSystem.scripts.dirac_rss_query_dtcache:main
    dirac-rss-set-status = DIRAC.ResourceStatusSystem.scripts.dirac_rss_set_status:main
    dirac-rss-set-token = DIRAC.ResourceStatusSystem.scripts.dirac_rss_set_token:main
    dirac-rss-sync = DIRAC.ResourceStatusSystem.scripts.dirac_rss_sync:main
    # StorageManagementSystem
    dirac-stager-monitor-file = DIRAC.StorageManagementSystem.scripts.dirac_stager_monitor_file:main
    dirac-stager-monitor-jobs = DIRAC.StorageManagementSystem.scripts.dirac_stager_monitor_jobs:main
    dirac-stager-monitor-request = DIRAC.StorageManagementSystem.scripts.dirac_stager_monitor_request:main
    dirac-stager-monitor-requests = DIRAC.StorageManagementSystem.scripts.dirac_stager_monitor_requests:main
    dirac-stager-show-stats = DIRAC.StorageManagementSystem.scripts.dirac_stager_show_stats:main
    dirac-stager-stage-files = DIRAC.StorageManagementSystem.scripts.dirac_stager_stage_files:main
    # TransformationSystem
    dirac-production-runjoblocal = DIRAC.TransformationSystem.scripts.dirac_production_runjoblocal:main
    dirac-transformation-add-files = DIRAC.TransformationSystem.scripts.dirac_transformation_add_files:main
    dirac-transformation-archive = DIRAC.TransformationSystem.scripts.dirac_transformation_archive:main
    dirac-transformation-clean = DIRAC.TransformationSystem.scripts.dirac_transformation_clean:main
    dirac-transformation-cli = DIRAC.TransformationSystem.scripts.dirac_transformation_cli:main
    dirac-transformation-get-files = DIRAC.TransformationSystem.scripts.dirac_transformation_get_files:main
    dirac-transformation-recover-data = DIRAC.TransformationSystem.scripts.dirac_transformation_recover_data:main
    dirac-transformation-remove-output = DIRAC.TransformationSystem.scripts.dirac_transformation_remove_output:main
    dirac-transformation-replication = DIRAC.TransformationSystem.scripts.dirac_transformation_replication:main
    dirac-transformation-verify-outputdata = DIRAC.TransformationSystem.scripts.dirac_transformation_verify_outputdata:main
    # WorkloadManagementSystem
    dirac-admin-kill-pilot = DIRAC.WorkloadManagementSystem.scripts.dirac_admin_kill_pilot:main
    dirac-admin-pilot-logging-info = DIRAC.WorkloadManagementSystem.scripts.dirac_admin_pilot_logging_info:main
    dirac-admin-show-task-queues = DIRAC.WorkloadManagementSystem.scripts.dirac_admin_show_task_queues:main
    dirac-admin-sync-pilot = DIRAC.WorkloadManagementSystem.scripts.dirac_admin_sync_pilot:main
    dirac-jobexec = DIRAC.WorkloadManagementSystem.scripts.dirac_jobexec:main
    dirac-wms-cpu-normalization = DIRAC.WorkloadManagementSystem.scripts.dirac_wms_cpu_normalization:main
    dirac-wms-get-queue-cpu-time = DIRAC.WorkloadManagementSystem.scripts.dirac_wms_get_queue_cpu_time:main
    dirac-wms-get-wn = DIRAC.WorkloadManagementSystem.scripts.dirac_wms_get_wn:main
    dirac-wms-get-wn-parameters = DIRAC.WorkloadManagementSystem.scripts.dirac_wms_get_wn_parameters:main
    dirac-wms-match = DIRAC.WorkloadManagementSystem.scripts.dirac_wms_match:main
    dirac-wms-pilot-job-info = DIRAC.WorkloadManagementSystem.scripts.dirac_wms_pilot_job_info:main

###############################################################################
# Linting
###############################################################################

# pep8 binary will still look into this section
[pep8]
# Pep8 codes:
# E111 - indentation is not a multiple of four
# E114  indentation is not a multiple of four (comment)
ignore=E111,E114

# Make it format also comments, and method signatures
aggressive=2

# Understood by pep8 and autopep8
max_line_length=120
# indent_size is unknown to pep8, but not to autopep8
indent_size=2

[pycodestyle]
# Pep8 codes:
# E111 - indentation is not a multiple of four
# E114 - indentation is not a multiple of four (comment)
# E402 - module level import not at top of file (for scripts)
# W503 - line break before binary operator (stupid, complains after or before...) 
# W504 - line break after binary operator (stupid, complains after or before...) 
ignore=E111,E114,E402,W503,W504
max_line_length=120
